--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -264,12 +264,7 @@ th {
     border: 1px solid #ddd !important;
   }
 }
-@font-face {
-  font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
-}
 .glyphicon {
   position: relative;
   top: 1px;
@@ -1127,7 +1122,6 @@ img {
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
-  pa
   height: auto;
 }
 .img-rounded {
@@ -6093,8 +6087,8 @@ button.close {
 
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
-    -webkit-perspective: 1000;
-            perspective: 1000;
+    -webkit-perspective: inherit;
+            perspective: inherit;
   }
   .carousel-inner > .item.next,
   .carousel-inner > .item.active.right {
@@ -6373,7 +6367,7 @@ button.close {
   position: fixed;
 }
 @-ms-viewport {
-  width: device-width;
+  width: auto;
 }
 .visible-xs,
 .visible-sm,
