--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -793,7 +793,6 @@ h2.big-text {font-size: 93px;}
 }
 
 .flexslider .slides img {
-    max-width: auto;
     height: 600px;
     display: block;
     width: 200%;
@@ -829,7 +828,7 @@ h2.big-text {font-size: 93px;}
 }
 .navbar-nav > li {
     padding: 9px !important;
-    border-bottom: 1px solid rgba(255,255,255,0.2;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
     display: block;
 }
 .navbar-toggle { border:none; }
